refactor : 댓글 api 수정 및 코드 리팩토링