@@ -2,12 +2,9 @@ package consolelog.comment.service;
 
 
 import consolelog.auth.dto.AuthInfo;
-import consolelog.auth.service.AuthService;
 import consolelog.comment.domain.Comment;
-import consolelog.comment.domain.CommentNicknameGenerator;
 import consolelog.comment.dto.*;
 import consolelog.comment.exception.CommentNotFoundException;
-import consolelog.comment.exception.ReplyDepthException;
 import consolelog.comment.repository.CommentRepository;
 import consolelog.member.domain.Member;
 import consolelog.member.exception.MemberNotFoundException;
@@ -18,9 +15,7 @@ import consolelog.project.repository.ProjectRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -28,57 +23,30 @@ public class CommentService {
     private final CommentRepository commentRepository;
     private final MemberRepository memberRepository;
     private final ProjectRepository projectRepository;
-    // 수정 필요
-    // 안 쓰는 변수 삭제
-    private final AuthService authService;
-    private final CommentNicknameGenerator commentNicknameGenerator;
 
 
     public CommentService(CommentRepository commentRepository, MemberRepository memberRepository,
-                          ProjectRepository projectRepository,
-                          AuthService authService, CommentNicknameGenerator commentNicknameGenerator) {
+                          ProjectRepository projectRepository) {
         this.commentRepository = commentRepository;
         this.memberRepository = memberRepository;
         this.projectRepository = projectRepository;
-        this.authService = authService;
-        this.commentNicknameGenerator = commentNicknameGenerator;
     }
 
     @Transactional
-    public Long addComment(Long postId, NewCommentRequest newCommentRequest, AuthInfo authInfo) {
+    public CommentResponse addComment(Long postId, NewCommentRequest newCommentRequest, AuthInfo authInfo) {
         Project project = projectRepository.findById(postId)
                 .orElseThrow(ProjectNotFoundException::new);
         Member member = memberRepository.findById(authInfo.getId())
                 .orElseThrow(MemberNotFoundException::new);
 
-        Comment comment = Comment.parent(member, project, newCommentRequest.getContent(), null);
-
+        Comment comment = Comment.builder()
+                .member(member)
+                .project(project)
+                .message(newCommentRequest.getContent())
+                .build();
         commentRepository.save(comment);
 
-        return comment.getId();
-    }
-
-
-    //대댓글
-    @Transactional
-    public Long addReply(Long commentId, NewReplyRequest newReplyRequest, AuthInfo authInfo) {
-        Comment parent = commentRepository.findById(commentId)
-                .orElseThrow(CommentNotFoundException::new);
-        Member member = memberRepository.findById(authInfo.getId())
-                .orElseThrow(MemberNotFoundException::new);
-
-        if (!parent.isParent()) {
-            throw new ReplyDepthException();
-        }
-        Project project = parent.getProject();
-
-//        String nickname = commentNicknameGenerator.getcommentNickname(newReplyRequest.isAnonymous(), authInfo, post);
-
-        Comment reply = Comment.child(member, project, newReplyRequest.getContent(), parent);
-        parent.getChildren().add(reply);
-
-        commentRepository.save(reply);
-        return reply.getId();
+        return CommentResponse.of(comment, authInfo.getId());
     }
 
 
@@ -90,29 +58,17 @@ public class CommentService {
         List<Comment> comments = commentRepository.findCommentsByProjectId(postId);
         List<CommentResponse> commentResponses = comments.stream()
                 .map(it -> convertToCommentResponse(authInfo, it))
-                .collect(Collectors.toList());
+                .toList();
         int numOfComment = commentResponses.size();
-        int numOfReply = commentResponses.stream()
-                .map(it -> it.getReplies().size())
-                .reduce(Integer::sum).orElse(0);
-        return new CommentsResponse(commentResponses, numOfComment + numOfReply);
+        return new CommentsResponse(commentResponses, numOfComment );
     }
 
     private CommentResponse convertToCommentResponse(AuthInfo authInfo, Comment comment) {
         Long id = authInfo.getId();
         if (comment.isSoftRemoved()) {
-            return CommentResponse.softRemovedOf(comment, convertToReplyResponses(comment, id));
+            return CommentResponse.softRemovedOf(comment);
         }
-        return CommentResponse.of(comment, id, convertToReplyResponses(comment, id), true);
-    }
-
-    private List<ReplyResponse> convertToReplyResponses(Comment parent, Long accessMemberId) {
-        final List<Comment> replies = commentRepository.findRepliesByParent(parent);
-        List<ReplyResponse> replyResponses = new ArrayList<>();
-        for (Comment reply : replies) {
-            replyResponses.add(ReplyResponse.of(reply, true));
-        }
-        return replyResponses;
+        return CommentResponse.of(comment, id);
     }
 
 
@@ -120,36 +76,8 @@ public class CommentService {
     public void deleteComment(Long commentId, AuthInfo authInfo) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(CommentNotFoundException::new);
-        comment.validateOwner(authInfo.getId());
-
-        deleteCommentOrReply(comment);
-    }
-
-    private void deleteCommentOrReply(Comment comment) {
-        if (comment.isParent()) {
-            deleteParent(comment);
-            return;
-        }
-
-        deleteChild(comment);
-    }
-
-    private void deleteParent(Comment comment) {
-        if (comment.hasNoReply()) {
-            commentRepository.delete(comment);
-            return;
-        }
-        comment.changePretendingToBeRemoved();
-    }
-
-    private void deleteChild(Comment comment) {
-        Comment parent = comment.getParent();
-        parent.deleteChild(comment);
+        comment.isAuthorized(authInfo.getId());
         commentRepository.delete(comment);
-
-        if (parent.hasNoReply() && parent.isSoftRemoved()) {
-            commentRepository.delete(parent);
-        }
     }
 
     @Transactional
@@ -160,12 +88,12 @@ public class CommentService {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(CommentNotFoundException::new);
 
-        comment.validateOwner(authInfo.getId());
+        comment.isAuthorized(authInfo.getId());
 
         comment.updateContent(updateCommentRequest.getContent());
         Comment updatedComment = commentRepository.save(comment);
 
-        return CommentResponse.of(updatedComment, authInfo.getId(), convertToReplyResponses(updatedComment, authInfo.getId()), false);
+        return CommentResponse.of(updatedComment, authInfo.getId());
     }
 }
 
